@@ -1,0 +1,6 @@
+* Wed Jul 15 2009 - Ding-Yi Chen <dchen at redhat.com> - 1.2.0.20090714
+Initial submit.
+
+
+
+
